--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <section class="section section--light">
-        <h2>Full Stack DEvelopment</h2>
+        <h2>Full Stack Development</h2>
         <p><b>The Full Stack Web Development program</b>  we offer can lead any beginner through the process, or take intermediate to advanced-level professionals to the next level in their careers! The learning path starts with IT Framework for beginners and continues with Front-end and Back-end developer course modules. <b> A full-stack web developer</b> is a programmer who has the basic knowledge for all layers of an application. Each layer is called a “stack”. Full stack web developers have the ability to design complete <b>web applications and websites which requires both front-end and back-end skills.</b>  They work on the database and debugging of web applications or websites. Are you ready to give your career a boost?</p>
     </section>
 
